Updated now playing

--- a/playing-archive-07-14-23.html
+++ b/playing-archive-07-14-23.html
@@ -150,18 +150,14 @@ body {
 <!-- Header -->
 <div class="header"><div class="back-button"><ul class="icons">
 	<li><a href="https://smallscreened.github.io" class="icon solid fa-arrow-left"><span class="label">Back</span></a></li></ul></div></br>
-	<h4>Now Playing</br>(Updated Jul 14, 2023)</h4>
+	<h4>Now Playing</br>(Updated Jun 22, 2023)</h4>
 </div>
 
 <!-- Photo Grid -->
-<div class="row"><div class="column"><a href="https://apps.apple.com/us/app/luck-be-a-landlord/id6450724928?uo=4"><img src="https://is2-ssl.mzstatic.com/image/thumb/Purple116/v4/9e/a2/9b/9ea29bde-ba9d-718d-5285-fec3636f62a8/AppIcon-0-0-1x_U007emarketing-0-0-0-5-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p>Luck be a Landlord</a></br></br>TrampolineTales</div>
-<div class="column"><a href="https://apps.apple.com/us/app/return-to-monkey-island/id1658628321?uo=4"><img src="https://is1-ssl.mzstatic.com/image/thumb/Purple116/v4/8c/a7/8e/8ca78e93-570d-4d67-9db2-e7a72bcd3100/AppIcon-0-1x_U007emarketing-0-7-0-85-220.png/512x512bb.png"></p><p>Return to Monkey Island</a></br></br>Devolver</div>
-<div class="column"><a href="https://apps.apple.com/us/app/roto-force/id1484337923?uo=4"><img src="https://is4-ssl.mzstatic.com/image/thumb/Purple126/v4/e4/2e/78/e42e78fb-1298-9915-e527-c2840bab00cb/AppIcon-0-0-1x_U007emarketing-0-0-0-10-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p>Roto Force</a></br></br>Plug In Digital</div>
-<div class="column"><a href="https://apps.apple.com/us/app/super-mega-lucky-box/id1659903900?uo=4"><img src="https://is1-ssl.mzstatic.com/image/thumb/Purple123/v4/1b/ba/94/1bba947e-c2e4-ef85-b9c9-795713911dac/AppIcon-0-0-1x_U007emarketing-0-0-0-10-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p>Super Mega Lucky Box</a></br>$2.99</br>BrettspielWelt</div>
-<div class="column"><a href="https://apps.apple.com/us/app/monster-train/id1577392165?uo=4"><img src="https://is5-ssl.mzstatic.com/image/thumb/Purple112/v4/97/ab/da/97abda90-89e9-4c4f-f934-ad7140b388b4/AppIcon-1x_U007emarketing-0-7-0-85-220.png/512x512bb.png"></p><p>Monster Train</a></br>$9.99</br>Good Shepherd Entertainment</div>
-<div class="column"><a href="https://apps.apple.com/us/app/bugsnax/id1449161497?uo=4"><img src="https://is1-ssl.mzstatic.com/image/thumb/Purple116/v4/93/30/84/9330844a-fdb2-3cc1-dc83-d3f6eeece0e1/AppIcon-1x_U007emarketing-0-4-85-220.png/512x512bb.png"></p><p>Bugsnax</a></br>$9.99</br>Young Horses, Inc.</div>
+<div class="row"><div class="column"><a href="https://apps.apple.com/us/app/fireball-wizard/id1590321558?uo=4"><img src="https://is2-ssl.mzstatic.com/image/thumb/Purple126/v4/4c/ae/d1/4caed169-6b40-0b12-4887-401432e62ccd/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p>Fireball Wizard</a></br>Free</br>Plug In Digital</div>
 <div class="column"><a href="https://apps.apple.com/us/app/coffee-golf/id6449750555?uo=4"><img src="https://is5-ssl.mzstatic.com/image/thumb/Purple126/v4/a2/76/0e/a2760ece-5732-44bf-fa28-8fef70a578dd/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p>Coffee Golf</a></br>Free</br>Shallot Games, LLC.</div>
 <div class="column"><a href="https://apps.apple.com/us/app/omega-strikers/id1582532342?uo=4"><img src="https://is5-ssl.mzstatic.com/image/thumb/Purple126/v4/ef/59/9c/ef599c08-8889-fa69-acb5-89d34ab67fce/AppIcon-1x_U007emarketing-0-4-85-220.png/512x512bb.png"></p><p>Omega Strikers</a></br>Free</br>Odyssey Interactive Inc</div>
+<div class="column"><a href="https://apps.apple.com/us/app/motorsport-manager-mobile-3/id1346580540?uo=4"><img src="https://is4-ssl.mzstatic.com/image/thumb/Purple122/v4/75/cb/42/75cb4290-ba65-270a-f3b2-beeb83b7fb96/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p>Motorsport Manager Mobile 3</a></br>$6.99</br>Playsport Games Ltd</div>
 <div class="column"><a href="https://apps.apple.com/us/app/genshin-impact/id1517783697?uo=4"><img src="https://is3-ssl.mzstatic.com/image/thumb/Purple112/v4/37/08/4d/37084d81-091e-a0d6-c34d-55f830214522/AppIcon-1x_U007emarketing-0-7-0-0-85-220.png/512x512bb.png"></p><p>Genshin Impact</a></br>Free</br>COGNOSPHERE PTE. LTD.</div>
 
 		<!-- Footer -->
