--- a/spiral-abyss/team_images/07-19-23/index.html
+++ b/spiral-abyss/team_images/07-19-23/index.html
@@ -229,32 +229,11 @@ img {
 	
 	</head>
 <body>
-	<iframe class="video" width="100%" src="https://video.hardlimit.com/videos/embed/be4fd58c-9130-4e93-a460-4054216c68f1" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe><h4 align="center">Floor 12</h4>
+	<iframe class="video" width="100%" src="https://video.hardlimit.com/videos/embed/4b5c1f96-c7b2-473c-a81d-392a613b0a69" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe><h4 align="center">Floor 12</h4>
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 3.8 CYCLE 1<p style="font-size:14px;color: rgb(64,64,64);">
-<div class="column">
-	<h3 align="center">Team 1</h3>
-	<a class="lightbox" href="#photo-5"><img src="team_images/photo-1.png" width="100%"></a>
-	<a class="lightbox" href="#photo-6"><img src="team_images/photo-2.png" width="100%"></a>
-	<a class="lightbox" href="#photo-7"><img src="team_images/photo-3.png" width="100%"></a>
-	<a class="lightbox" href="#photo-8"><img src="team_images/photo-4.png" width="100%"></a></div>
-	<div class="column">
-	<h3 align="center">Team 2</h3>
-	<a class="lightbox" href="#photo"><img src="team_images/photo-5.png" width="100%"></a>
-	<a class="lightbox" href="#photo-2"><img src="team_images/photo-6.png" width="100%"></a>
-	<a class="lightbox" href="#photo-3"><img src="team_images/photo-7.png" width="100%"></a>
-	<a class="lightbox" href="#photo-4"><img src="team_images/photo-8.png" width="100%"></a></div>
-</div>
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 3.7 CYCLE 2<p style="font-size:14px;color: rgb(64,64,64);">
 <img width="100%" src="team_images/photo-9.png">
-<p><br><br>Comments: <br><br>Back to a solid challenge for abyss. It's not easy, but it's also not hard because of randomness. Nilou bloom is an all-star team for the first half. I don't even have the ideal units plugged in and my Yaoyao driver didn't quite have enough ER and I still was able to muddle my way through and leave enough time for my hyper invested Hu Tao to brute force everything else on the back halves.<br><br><br></p>
-<div class="lightbox-target" id="photo"><img src="team_images/photo-5.png" width="75%"><a class="lightbox-close" href></a></div>
-<div class="lightbox-target" id="photo-2"><img src="team_images/photo-6.png" width="75%"><a class="lightbox-close" href></a></div>
-<div class="lightbox-target" id="photo-3"><img src="team_images/photo-7.png" width="75%"><a class="lightbox-close" href></a></div>
-<div class="lightbox-target" id="photo-4"><img src="team_images/photo-8.png" width="75%"><a class="lightbox-close" href></a></div>
-<div class="lightbox-target" id="photo-5"><img src="team_images/photo-1.png" width="75%"><a class="lightbox-close" href></a></div>
-<div class="lightbox-target" id="photo-6"><img src="team_images/photo-2.png" width="75%"><a class="lightbox-close" href></a></div>
-<div class="lightbox-target" id="photo-7"><img src="team_images/photo-3.png" width="75%"><a class="lightbox-close" href></a></div>
-<div class="lightbox-target" id="photo-8"><img src="team_images/photo-4.png" width="75%"><a class="lightbox-close" href></a></div>
+<p><br><br>Comments: <br><br>God this cycle sucks. It's the first time in a long time I have had to use different teams, and perhaps the only time I have needed to use six unique teams to clear three floors. Certain parts of the encounters are interesting like the baptist on 12-3 and theoretically the shieldbreaking needs for 12-1, but so much of this is also attached to crummy wave spawning and enemies that move around way too much. This results in fights where you basically just have to get lucky with how enemies group themselves. You don't even need to play optimally (as you can see in the 12-3 chamber 1 fight). It doesn't feel good! I'd rather fight the Wenut than do this.<br><br><br></p>
 
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
