Updated Favicon/Link Preview Image

--- a/spiral-abyss/index.html
+++ b/spiral-abyss/index.html
@@ -224,7 +224,7 @@ img {
 <meta property="twitter:url" content="https://smallscreen.info/spiral-abyss">
 <meta property="twitter:title" content="Spiral Abyss Tracker">
 <meta property="twitter:description" content="Check Out Stats and Video">
-<meta property="twitter:image" content="assets/images/spiral.png">
+<meta property="twitter:image" content="..assets/images/spiral.png">
 	
 	
 	</head>
