Now playing updated

--- a/playing-archive-09-08-23.html
+++ b/playing-archive-09-08-23.html
@@ -150,14 +150,12 @@ body {
 <!-- Header -->
 <div class="header"><div class="back-button"><ul class="icons">
 	<li><a href="https://smallscreened.github.io" class="icon solid fa-arrow-left"><span class="label">Back</span></a></li></ul></div></br>
-	<h4>Now Playing</br>(Updated Sep 8, 2023)</h4>
+	<h4>Now Playing</br>(Updated Aug 13, 2023)</h4>
 </div>
 
 <!-- Photo Grid -->
-<div class="row"><div class="column"><a href="https://apps.apple.com/us/app/mega-man-x-dive-offline/id6446021269?uo=4"><img src="https://is1-ssl.mzstatic.com/image/thumb/Purple116/v4/40/f5/8e/40f58e25-0097-1928-3f3b-a4472c7b050a/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p>MEGA MAN X DiVE Offline</a></br>$29.99</br>CAPCOM</div>
-<div class="column"><a href="https://apps.apple.com/us/app/motorsport-manager-4/id6449251957?uo=4"><img src="https://is1-ssl.mzstatic.com/image/thumb/Purple116/v4/b7/45/9a/b7459a16-7c78-f2b8-92bd-6c8c9457d42a/AppIcon-1x_U007emarketing-0-7-0-85-220.png/512x512bb.png"></p><p>Motorsport Manager 4</a></br></br>Playsport Games Ltd</div>
-<div class="column"><a href="https://apps.apple.com/us/app/unpacking/id6450058135?uo=4"><img src="https://is1-ssl.mzstatic.com/image/thumb/Purple126/v4/76/6f/bf/766fbfe1-fdd2-1545-dbcf-54277150f9bb/AppIcon-1x_U007emarketing-0-7-0-85-220.png/512x512bb.png"></p><p>Unpacking</a></br>$9.99</br>Humble Bundle</div>
-<div class="column"><a href="https://apps.apple.com/us/app/dawncaster-deckbuilding-rpg/id1555459868?uo=4"><img src="https://is1-ssl.mzstatic.com/image/thumb/Purple126/v4/a2/5f/4d/a25f4dd5-30f2-c9d8-9fab-fe459c105cc1/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p>Dawncaster: Deckbuilding RPG</a></br>$4.99</br>Rick van der Wal</div>
+<div class="row"><div class="column"><a href="https://apps.apple.com/us/app/six-ages-ride-like-the-wind/id934012726?uo=4"><img src="https://is1-ssl.mzstatic.com/image/thumb/Purple112/v4/7c/15/48/7c154852-34be-6cd2-8af7-11950b84d4a7/AppIcon-1x_U007emarketing-0-7-0-0-85-220.png/512x512bb.png"></p><p>Six Ages: Ride Like the Wind</a></br>$9.99</br>A Sharp, LLC</div>
+<div class="column"><a href="https://apps.apple.com/us/app/heaven-will-be-mine/id1443990923?uo=4"><img src="https://is3-ssl.mzstatic.com/image/thumb/Purple128/v4/82/73/39/82733976-2dbc-5126-b01e-fbe98f800422/AppIcon-0-1x_U007emarketing-0-0-GLES2_U002c0-512MB-sRGB-0-0-0-85-220-0-0-0-7.png/512x512bb.png"></p><p>Heaven Will Be Mine</a></br>$4.99</br>Pillow Fight LLC</div>
 <div class="column"><a href="https://apps.apple.com/us/app/geo-gods/id1618193651?uo=4"><img src="https://is2-ssl.mzstatic.com/image/thumb/Purple126/v4/ba/7a/97/ba7a971e-a986-caaf-aae0-fbd7ee9eab78/AppIcon-1x_U007emarketing-0-4-85-220.png/512x512bb.png"></p><p>Geo Gods</a></br>Free</br>Arnold Rauers</div>
 <div class="column"><a href="https://apps.apple.com/us/app/coffee-golf/id6449750555?uo=4"><img src="https://is5-ssl.mzstatic.com/image/thumb/Purple126/v4/a2/76/0e/a2760ece-5732-44bf-fa28-8fef70a578dd/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p>Coffee Golf</a></br>Free</br>Shallot Games, LLC.</div>
 <div class="column"><a href="https://apps.apple.com/us/app/genshin-impact/id1517783697?uo=4"><img src="https://is3-ssl.mzstatic.com/image/thumb/Purple112/v4/37/08/4d/37084d81-091e-a0d6-c34d-55f830214522/AppIcon-1x_U007emarketing-0-7-0-0-85-220.png/512x512bb.png"></p><p>Genshin Impact</a></br>Free</br>COGNOSPHERE PTE. LTD.</div>
