--- a/spiral-abyss/team_images/09-18-23/index.html
+++ b/spiral-abyss/team_images/09-18-23/index.html
@@ -229,8 +229,7 @@ img {
 	
 	</head>
 <body>
-	<!-- <iframe class="video" width="100%" src="https://video.hardlimit.com/videos/embed/f283cea2-b366-44d1-b7f1-76dea6474e26" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe><h4 align="center">Floor 12</h4> -->
-	
+	<iframe class="video" width="100%" src="https://video.hardlimit.com/videos/embed/f283cea2-b366-44d1-b7f1-76dea6474e26" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe><h4 align="center">Floor 12</h4>
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
 <div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 4.0 CYCLE 1<p style="font-size:14px;color: rgb(64,64,64);">
 <div class="column">
@@ -247,7 +246,7 @@ img {
 	<a class="lightbox" href="#photo-4"><img src="team_images/photo-8.png" width="100%"></a></div>
 </div>
 <img width="100%" src="team_images/photo-9.png">
-<p><br><br>Comments: <br><br>My video got eaten but I'll still post clear teams. This was the first time I used two fatui carries to get me through both sides and a debut for Layla, who feels surprisingly really snappy. I didn't feel any major difference from the blessing this time, but my clear stats show Lyney was hitting at LOT harder (or did at least one time). In any case, it feels good to go through an abyss that doesn't feel like I have to rely on my absolutely most invested teams or an overly prescriptive team composition just to squeak by.<br><br><br></p>
+<p><br><br>Comments: <br><br>Seems like Hoyoverse is taking it easier on players with the release of Fontaine. This is easily my fastest clear in the last six months, and I don't think it's just because I lucked into getting Lyney and his signature weapon. Pneuma/Ouisa mechanics here hardly feel relevant and there's no overly aggressive enemies that don't stay grouped or just go invulnerable for long periods of time. Not much to say about it as I sorta just banged my way through it with my pyro carries. Lyney I'm still getting used to, but the way he can dump a ton of damage into a short window is very satisfying.<br><br><br></p>
 <div class="lightbox-target" id="photo"><img src="team_images/photo-5.png" width="75%"><a class="lightbox-close" href></a></div>
 <div class="lightbox-target" id="photo-2"><img src="team_images/photo-6.png" width="75%"><a class="lightbox-close" href></a></div>
 <div class="lightbox-target" id="photo-3"><img src="team_images/photo-7.png" width="75%"><a class="lightbox-close" href></a></div>
