new spiral abyss update

--- a/spiral-abyss/team_images/10-03-23/index.html
+++ b/spiral-abyss/team_images/10-03-23/index.html
@@ -229,10 +229,10 @@ img {
 	
 	</head>
 <body>
-	<iframe class="video" width="100%" src="https://video.hardlimit.com/videos/embed/c5af97a6-7e7f-4a4f-87a4-48ffed622973" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe><h4 align="center">Floor 12</h4>
+	<!-- <iframe class="video" width="100%" src="https://video.hardlimit.com/videos/embed/f283cea2-b366-44d1-b7f1-76dea6474e26" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe><h4 align="center">Floor 12</h4> -->
 	
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 4.1 CYCLE 1<p style="font-size:14px;color: rgb(64,64,64);">
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 4.0 CYCLE 2<p style="font-size:14px;color: rgb(64,64,64);">
 <div class="column">
 	<h3 align="center">Team 1</h3>
 	<a class="lightbox" href="#photo-5"><img src="team_images/photo-1.png" width="100%"></a>
@@ -247,7 +247,7 @@ img {
 	<a class="lightbox" href="#photo-4"><img src="team_images/photo-8.png" width="100%"></a></div>
 </div>
 <img width="100%" src="team_images/photo-9.png">
-<p><br><br>Comments: <br><br>Another pretty manageable abyss. I don't know if they'll ever make anything as tough as the tail end of all the Sumeru content. It also helps that Neuvillette seems very strong! At least, with this cycle's blessings, anyway. He's barely built in this run and I don't even play close to optimally and I got through everything pretty easily. To be fair, having my Lyney mono-pyro team continue to whip ass defintely made those Neuvillette clears much easier.<br><br><br></p>
+<p><br><br>Comments: <br><br>My video got eaten but I'll still post clear teams. This was the first time I used two fatui carries to get me through both sides and a debut for Layla, who feels surprisingly really snappy. I didn't feel any major difference from the blessing this time, but my clear stats show Lyney was hitting at LOT harder (or did at least one time). In any case, it feels good to go through an abyss that doesn't feel like I have to rely on my absolutely most invested teams or an overly prescriptive team composition just to squeak by.<br><br><br></p>
 <div class="lightbox-target" id="photo"><img src="team_images/photo-5.png" width="75%"><a class="lightbox-close" href></a></div>
 <div class="lightbox-target" id="photo-2"><img src="team_images/photo-6.png" width="75%"><a class="lightbox-close" href></a></div>
 <div class="lightbox-target" id="photo-3"><img src="team_images/photo-7.png" width="75%"><a class="lightbox-close" href></a></div>
