--- a/spiral-abyss/team_images/10-17-23/index.html
+++ b/spiral-abyss/team_images/10-17-23/index.html
@@ -229,10 +229,10 @@ img {
 	
 	</head>
 <body>
-	<iframe class="video" width="100%" src="https://video.hardlimit.com/videos/embed/ecdad9f5-96b6-4cb7-8a17-b2c6effad986" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe><h4 align="center">Floor 12</h4>
+	<iframe class="video" width="100%" src="https://video.hardlimit.com/videos/embed/c5af97a6-7e7f-4a4f-87a4-48ffed622973" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe><h4 align="center">Floor 12</h4>
 	
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 4.1 CYCLE 2<p style="font-size:14px;color: rgb(64,64,64);">
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 4.1 CYCLE 1<p style="font-size:14px;color: rgb(64,64,64);">
 <div class="column">
 	<h3 align="center">Team 1</h3>
 	<a class="lightbox" href="#photo-5"><img src="team_images/photo-1.png" width="100%"></a>
@@ -247,7 +247,7 @@ img {
 	<a class="lightbox" href="#photo-4"><img src="team_images/photo-8.png" width="100%"></a></div>
 </div>
 <img width="100%" src="team_images/photo-9.png">
-<p><br><br>Comments: <br><br>I used the flying carries this cycle! I hated fighting the seahorse so I figured if I could get enough elemental application to break the shield it would be easier. I was actually kind of surprised that the mono-pyro Lyney team had a hard time with that last cycle but Wanderer took care of it no problem. My far-from-ideally build Neuvillette continues to be pretty strong as well and the only change I made to his team was to forego defense and replace Beidou with Yae, which worked out just fine, though I did have to retry a couple of times because of Yae's squishiness.<br><br><br></p>
+<p><br><br>Comments: <br><br>Another pretty manageable abyss. I don't know if they'll ever make anything as tough as the tail end of all the Sumeru content. It also helps that Neuvillette seems very strong! At least, with this cycle's blessings, anyway. He's barely built in this run and I don't even play close to optimally and I got through everything pretty easily. To be fair, having my Lyney mono-pyro team continue to whip ass defintely made those Neuvillette clears much easier.<br><br><br></p>
 <div class="lightbox-target" id="photo"><img src="team_images/photo-5.png" width="75%"><a class="lightbox-close" href></a></div>
 <div class="lightbox-target" id="photo-2"><img src="team_images/photo-6.png" width="75%"><a class="lightbox-close" href></a></div>
 <div class="lightbox-target" id="photo-3"><img src="team_images/photo-7.png" width="75%"><a class="lightbox-close" href></a></div>
