--- a/spiral-abyss/team_images/11-02-23/index.html
+++ b/spiral-abyss/team_images/11-02-23/index.html
@@ -229,10 +229,10 @@ img {
 	
 	</head>
 <body>
-	<iframe class="video" width="100%" src="https://video.hardlimit.com/videos/embed/034a5d5e-38dc-488b-8f01-6d6787d3a061" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe><h4 align="center">Floor 12</h4>
+	<iframe class="video" width="100%" src="https://video.hardlimit.com/videos/embed/ecdad9f5-96b6-4cb7-8a17-b2c6effad986" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe><h4 align="center">Floor 12</h4>
 	
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 4.1 CYCLE 3<p style="font-size:14px;color: rgb(64,64,64);">
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 4.1 CYCLE 2<p style="font-size:14px;color: rgb(64,64,64);">
 <div class="column">
 	<h3 align="center">Team 1</h3>
 	<a class="lightbox" href="#photo-5"><img src="team_images/photo-1.png" width="100%"></a>
@@ -247,7 +247,7 @@ img {
 	<a class="lightbox" href="#photo-4"><img src="team_images/photo-8.png" width="100%"></a></div>
 </div>
 <img width="100%" src="team_images/photo-9.png">
-<p><br><br>Comments: <br><br>If it ain't broke, don't fix it! I just ran the same teams here with some (very slight) artifact changes to Bennett and Kazuha, mostly in an effort to see if I could get the cryo buff from Wanderer's acension passive a bit more easily. I don't really know if I was successful, partially because it's hard to see in the heat of the moment and also because this cycle's blessing grants a ton of free crit rate already. Also, for some reason, my recording froze twice in the middle of 12-2-2. Don't know what that's about, but it's also probably the easiest and most straightforward chamber of the lot.<br><br><br></p>
+<p><br><br>Comments: <br><br>I used the flying carries this cycle! I hated fighting the seahorse so I figured if I could get enough elemental application to break the shield it would be easier. I was actually kind of surprised that the mono-pyro Lyney team had a hard time with that last cycle but Wanderer took care of it no problem. My far-from-ideally build Neuvillette continues to be pretty strong as well and the only change I made to his team was to forego defense and replace Beidou with Yae, which worked out just fine, though I did have to retry a couple of times because of Yae's squishiness.<br><br><br></p>
 <div class="lightbox-target" id="photo"><img src="team_images/photo-5.png" width="75%"><a class="lightbox-close" href></a></div>
 <div class="lightbox-target" id="photo-2"><img src="team_images/photo-6.png" width="75%"><a class="lightbox-close" href></a></div>
 <div class="lightbox-target" id="photo-3"><img src="team_images/photo-7.png" width="75%"><a class="lightbox-close" href></a></div>
