Tallies > Stream Box Status a

--- a/live.html
+++ b/live.html
@@ -87,7 +87,7 @@
 <body>
 <p align="center"><iframe class="video" title="Campbell is Live" src="https://video.hardlimit.com/videos/embed/06e0543d-7017-4bcd-a60c-e0f802186e33?warningTitle=0" width="560" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p>
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">LISTENING TO THE NEW ROMY BOILER ROOM AND BARON LANING<p style="font-size:14px;color: rgb(64,64,64);">Now Playing: Wild Rift</div>
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">OK TIME TO SEE IF I CAN DO A BIRTHDAY ONE-SHOT ABYSS CLEAR<p style="font-size:14px;color: rgb(64,64,64);">Now Playing: Genshin Impact</div>
 <p align="center">Game listed may change suddenly depending on my whims.<br><br><br></p>
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
