--- a/music/2023.html
+++ b/music/2023.html
@@ -138,7 +138,7 @@ body{
 </style>
 <body>
 <h2 align="center">6 Albums, 6 Singles (2023)</h2>
-<h3 align="center"><p>Click on an image for a player and links, or <a href="https://www.youtube.com/playlist?list=PLTm1tn5YD5gLcVQnhMXMf4Skje8t6zML4">listen to everything in one playlist here.</a></p>
+<h3 align="center"><p>Click on an image for a player and links, or <a href="https://youtube.com/playlist?list=PLTm1tn5YD5gImd--nbO2_iU4loKLkJV9-&si=EJis6RazWSy3Wu2M">listen to everything in one playlist here.</a></p>
 <p>Albums</p></h3>
 <div class="row">
 <div class="wrapper"><label for="reveal-player1" class="btn"><div class="btn"><img src="https://is1-ssl.mzstatic.com/image/thumb/Music126/v4/e9/6d/1a/e96d1ab0-0176-685c-1f4d-01e73e91a925/191404901076.png/512x512bb.png" style="width:100%"><div class="hovercap">Overmono<br>Good Lies</div></div></label>
