Spiral Abyss Update

--- a/spiral-abyss/team_images/12-16-23/index-2.html
+++ b/spiral-abyss/team_images/12-16-23/index-2.html
@@ -229,10 +229,10 @@ img {
 	
 	</head>
 <body>
-	<iframe class="video" width="100%" src="https://video.hardlimit.com/videos/embed/dca85a94-9fba-4f02-a6c1-7742411f37ec" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe><h4 align="center">Floor 12</h4>
+	<iframe class="video" width="100%" src="https://video.hardlimit.com/videos/embed/07fdd34d-5006-499b-9e5f-e5c276fe0b6d" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe><h4 align="center">Floor 12</h4>
 	
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 4.3 CYCLE 3<p style="font-size:14px;color: rgb(64,64,64);">
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 4.2 CYCLE 2<p style="font-size:14px;color: rgb(64,64,64);">
 <div class="column">
 	<h3 align="center">Team 1</h3>
 	<a class="lightbox" href="#photo-5"><img src="team_images/photo-1.png" width="100%"></a>
@@ -247,7 +247,7 @@ img {
 	<a class="lightbox" href="#photo-4"><img src="team_images/photo-8.png" width="100%"></a></div>
 </div>
 <img width="100%" src="team_images/photo-9.png">
-<p><br><br>Comments: <br><br>Not much to say here. When the third cycle hits I tend to just want to get through the floors as quickly and easily as possible. Neuvillette and Hu Tao were the right picks given the enemy comps on either side. On to the next!<br><br><br></p>
+<p><br><br>Comments: <br><br>I really wanted to make it through this cycle with both featured characters, but I just can't get Cyno to work. I've got a good polearm for him, solid artifacts, solid teammates (but no Nahida lol), and he's set up for success in side two. But, he's just so... slow at killing things. I could have subbed out Ayato to get some faster clears on side one, but Ayato is one of my favorite characters, whereas Cyno is one of my most regretted pulls, who I regret even more now that he can't even feel good (much less perform well) against a challenge that's kinda tailored to his kit. Bummer. Got my 36 stars with Hu Tao though no problem :)<br><br><br></p>
 <div class="lightbox-target" id="photo"><img src="team_images/photo-5.png" width="75%"><a class="lightbox-close" href></a></div>
 <div class="lightbox-target" id="photo-2"><img src="team_images/photo-6.png" width="75%"><a class="lightbox-close" href></a></div>
 <div class="lightbox-target" id="photo-3"><img src="team_images/photo-7.png" width="75%"><a class="lightbox-close" href></a></div>
