--- a/spiral-abyss/team_images/01-17-24/index.html
+++ b/spiral-abyss/team_images/01-17-24/index.html
@@ -229,10 +229,10 @@ img {
 	
 	</head>
 <body>
-	<iframe class="video" width="100%" src="https://video.hardlimit.com/videos/embed/f4fedacf-ccea-4442-b306-47a714099a49?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe><h4 align="center">Floor 12</h4>
+	<iframe class="video" width="100%" src="https://video.hardlimit.com/videos/embed/417165e4-f8ff-4acf-9cd8-e4f7a69adf1d" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe><h4 align="center">Floor 12</h4>
 	
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 4.4 CYCLE 2<p style="font-size:14px;color: rgb(64,64,64);">
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 4.4 CYCLE 1<p style="font-size:14px;color: rgb(64,64,64);">
 <div class="column">
 	<h3 align="center">Team 1</h3>
 	<a class="lightbox" href="#photo-5"><img src="team_images/photo-1.png" width="100%"></a>
@@ -247,7 +247,7 @@ img {
 	<a class="lightbox" href="#photo-4"><img src="team_images/photo-8.png" width="100%"></a></div>
 </div>
 <img width="100%" src="team_images/photo-9.png">
-<p><br><br>Comments: <br><br>I made the mistake of bringing Kazuha to this abyss and he made clearing with that Lyney team a pain. But! I was determined and stubborn so I made it work eventually. On the other side I tried Alhaitham for the first time in awhile after seeing people talk about how nice he feels with Furina in a double dendro team. I'm sure most of those people mean Nahida as the other dendro, but I don't like her and will never pull for her. With Baizhu, it still felt pretty good, though there was a lot of pressure to execute on that side with how slow Lyney with no Xiangling was on some chambers, especially the hydro tulpa.<br><br><br></p>
+<p><br><br>Comments: <br><br>I wanted to see if I could pull Ningguang through this abyss since in my mind she inhabits a very similar role as Navia. I think I was a little too overconfident, though. I think she's great and she's carried me through several cycles previously, but to make it through I had to trade her out for Lyney. As for the other side, I found the distribution of enemies like a fun puzzle. Electro bat discourages electro, while geo slimes discourage geo and encourage claymores. I decided in the end to see if I could use Beidou as both an effective shielder against the bat and as the rockbreaker for the geo slimes, and it turned out I was right! Plus, with all that electro I got to have fun busting out my Thundering Fury Ayato build. Very cool abyss this round. Hoping for more like this!<br><br><br></p>
 <div class="lightbox-target" id="photo"><img src="team_images/photo-5.png" width="75%"><a class="lightbox-close" href></a></div>
 <div class="lightbox-target" id="photo-2"><img src="team_images/photo-6.png" width="75%"><a class="lightbox-close" href></a></div>
 <div class="lightbox-target" id="photo-3"><img src="team_images/photo-7.png" width="75%"><a class="lightbox-close" href></a></div>
