Tallies > Stream Box Status a

--- a/live.html
+++ b/live.html
@@ -87,7 +87,7 @@
 <body>
 <p align="center"><iframe class="video" title="Campbell is Live" src="https://video.hardlimit.com/videos/embed/06e0543d-7017-4bcd-a60c-e0f802186e33?warningTitle=0" width="560" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p>
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">TRYING OUT DEATH STRANDING ON IOS, WHICH I AM FULLY CONFIDENT WILL GO POORLY AND IN PROBABLY A NOT VERY ENTERTAINING WAY<p style="font-size:14px;color: rgb(64,64,64);">Now Playing: Death Stranding</div>
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">I WANTED TO DO THIS ABYSS WITH XIANYUN AND GAMING BUT THEY AREN'T READY YET AND TONIGHT'S A GOOD NIGHT TO KNOCK IT OUT. SO IT GOES #GENSHINIMPACT<p style="font-size:14px;color: rgb(64,64,64);">Now Playing: Genshin Impact</div>
 <p align="center">Game listed may change suddenly depending on my whims.<br><br><br></p>
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
