Updated Email Sign Up, Testing Image Zoom

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			</header>
 
 		<!-- Signup Form -->
-			<form action="https://tinyletter.com/smallscreen" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/smallscreen', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><input style="width: 65%;" type="text" name="email" id="tlemail" /></br><input type="hidden" value="1" name="embed"/><input type="submit" style="width: 200px;" value="Subscribe" /></form>
+			<iframe src="https://embeds.beehiiv.com/16757b0e-d564-4fc4-9d58-cf81374c8f59?slim=true" data-test-id="beehiiv-embed" height="52" frameborder="0" scrolling="no" style="margin: 0; border-radius: 0px !important; background-color: transparent;"></iframe>
         
         	
 			
