Removed zoom from photo 9

--- a/spiral-abyss/index.html
+++ b/spiral-abyss/index.html
@@ -63,7 +63,7 @@
 	
 	</head>
 <body>
-	<iframe class="video" width="100%" height="500px" src="https://video.hardlimit.com/videos/embed/aad3b6ad-0343-4bc8-a8f3-f7fb9dd48dde?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe><h4 align="center">Floor 11 and 12</h4>
+	<iframe class="video" width="100%" src="https://video.hardlimit.com/videos/embed/aad3b6ad-0343-4bc8-a8f3-f7fb9dd48dde?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe><h4 align="center">Floor 11 and 12</h4>
 	
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
 <div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 4.4 CYCLE 1<p style="font-size:14px;color: rgb(64,64,64);">
@@ -90,8 +90,7 @@
 	<img src="team_images/photo-8.png" width="100%"></label></div>
 	</div>
 </div>
-<div class="click-zoom"><label><input type="checkbox">
-	<img src="team_images/photo-9.png" width="100%"></label></div>
+	<img src="team_images/photo-9.png" width="100%">
 <p><br><br>Comments: <br><br>This cycle of abyss wasn't so much hard as it was annoying. Both the mechanical worm and the Wenut both just spend inordinate amounts of time being unhittable, which was the cause for most of my retries. There was also some grouping challenges I had with my Nilou team, but 1) I could correct those through my own actions and 2) grouping tends to be the only true challenge of running a Nilou team. This variant on the bountiful bloom comp is probably my favorite as it takes advantage of basically the only real way Candace can contribute meaningfully to teams, and Lyney continues to be my favorite Fontaine character. Hoping next go around my Gaming and Xianyun will be strong enough to take on the abyss.<br><br><br></p>
 
 <!-- Footer -->
