--- a/spiral-abyss/index.html
+++ b/spiral-abyss/index.html
@@ -1,5 +1,11 @@
 <html>
 	<style>
+.video {
+	aspect-ratio: 16 / 9;
+	max-width: 100%;
+	height: auto;
+}	
+
 .column {
 	float: left;
 	width: 50%;
