Fixed Styling and Credits for Home Page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			</header>
 
 		<!-- Signup Form -->
-			<iframe src="https://embeds.beehiiv.com/16757b0e-d564-4fc4-9d58-cf81374c8f59?slim=true" data-test-id="beehiiv-embed" height="52" frameborder="0" scrolling="no" style="margin: 0; border-radius: 0px !important; background-color: transparent;"></iframe>
+			<iframe src="https://embeds.beehiiv.com/16757b0e-d564-4fc4-9d58-cf81374c8f59?slim=true" data-test-id="beehiiv-embed" height="52" frameborder="0" scrolling="no" style="margin: 0; width: 500px; border-radius: 0px !important; background-color: transparent;"></iframe>
         
         	
 			
@@ -35,7 +35,7 @@
 					<li><a href=mailto:campbell@smallscreen.info class="icon fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; namestolen.</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a>, <a href="https://tinyletter.com">Tiny Letter</a></li>
+					<li>&copy; namestolen.</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a>, <a href="https://beehiiv.com">beehiiv</a></li>
 				</ul>
 			</footer>
 
