--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         	
 			
 		<!-- Now Playing: Could become a longer body -->
-		<p><a href="https://tinyletter.com/smallscreen/archive">Issue Archive</a> | <a href="https://smallscreen.info/playing">Now Playing</a>
+		<p><a href="https://smallscreen.beehiiv.com/archive">Issue Archive</a> | <a href="https://smallscreen.info/links">Links</a>
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
