testing the zoom function to center too

--- a/spiral-abyss/index.html
+++ b/spiral-abyss/index.html
@@ -37,6 +37,11 @@
 
 .click-zoom input[type=checkbox]:checked~img {
   transform: scale(2);
+  margin: 0;
+  left: 50%;  
+  position: absolute;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   cursor: zoom-out
 }		
 
@@ -69,7 +74,7 @@
 	
 	</head>
 <body>
-	<iframe class="video" width="100%" src="https://video.hardlimit.com/videos/embed/aad3b6ad-0343-4bc8-a8f3-f7fb9dd48dde?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe><h4 align="center">Floor 11 and 12</h4>
+	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/aad3b6ad-0343-4bc8-a8f3-f7fb9dd48dde?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">Floor 11 and 12</h4>
 	
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
 <div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 4.4 CYCLE 1<p style="font-size:14px;color: rgb(64,64,64);">
