--- a/live.html
+++ b/live.html
@@ -85,7 +85,7 @@
 	
 	</head>
 <body>
-<p align="center"><iframe class="video" title="Campbell is Live" src="https://video.hardlimit.com/videos/embed/06e0543d-7017-4bcd-a60c-e0f802186e33?warningTitle=0" width="560" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p>
+<p align="center"><iframe class="video" title="Campbell is Live" src="https://video.hardlimit.com/videos/embed/141016fa-cc73-4502-b227-0855b99e9ceb?title=0&amp;warningTitle=0" width="560" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p>
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
 <div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">IT'S GRANDIA TIME -SHIGERU MIYAMOTO<p style="font-size:14px;color: rgb(64,64,64);">Now Playing: Grandia</div>
 <p align="center">Game listed may change suddenly depending on my whims.<br><br><br></p>
